2001-09-01  James Henstridge  <james@daa.com.au>

	* */Makefile.am: various changes to include missing files, and fix
	sheets dir to handle building with builddir != srcdir.

	* autogen.sh: unconditionally pass the --enable-maintainer-mode
	and --enable-db2html flags so that builds from CVS work correctly.

	* configure.in: increment version number.  Also add an
	--enable-db2html flag.  Without the flag, db2html won't be run (if
	the flag is passed and db2html is not present, do nothing).

2001-08-30  Cyrille Chepelov  <chepelov@calixo.net>

	* lib/poly_conn.c: (polyconn_copy): it's a wonder this routine
	even compiled. It's really too bad there is no lint tool easily
	available (or a more cautious, pedandic, paranoid and verbose
	compiler). Anyway, this fixes #59662. (this didn't affect 0.88.x)

2001-08-27  Cyrille Chepelov  <chepelov@calixo.net>

	* app/load_save.c:
	* dia/lib/plug-ins.c: use g_strdup() instead of strdup(). Patch
	from <robert.young@dsto.defence.gov.au>. Fixes #59591.

	* app/menu.c: added ellipsis(...) to diagram properties menu item.
	* app/dia-props.c: diagram properties dialog contents did not
	represent current diagram settings.
	* app/dia-props.[ch]:
	* app/display.c: diagram properties contents now follows currently
	selected diagram.
	Patch also from <robert.young@dsto.defence.gov.au>, fixes #59409.

	* AUTHORS: added Robert Young.
	
2001-08-27  Cyrille Chepelov  <chepelov@calixo.net>

	* app/modify_tool.c: (modify_button_release): Patch from
	<robert.young@dsto.defence.gov.au>. Fixes the remaining bit from
	#59090: if selection dragging was released outside of the window, 
	artifacts of the selection box remained.

2001-08-25  Cyrille Chepelov  <chepelov@calixo.net>

	* Objects/custom/shape_info.c: added missing #include <xmlmemory.h>

2001-08-19  Cyrille Chepelov  <chepelov@calixo.net>

	* configure.in:
	* sheets/Makefile.am: prepared the terrain for the Version of
	xml-i18n-tools Which Comes After 0.9 (and which will feature at